# Arduino-ATmega2560-SSD1306

./: .gitignore  Cargo.toml  README.md  platformio.ini
cpp/include/: Layout.hpp  Router.hpp  View.hpp
cpp/include/Encoder/: RotaryEncoder.hpp
cpp/include/View/: ErrorView.hpp  HomeView.hpp
cpp/src/: Layout.cpp  Router.cpp  View.cpp  main.cpp
cpp/src/Encoder/: RotaryEncoder.cpp
cpp/src/View/: ErrorView.cpp  HomeView.cpp
include/: Layout.hpp  Router.hpp  View.hpp
include/Encoder/: RotaryEncoder.hpp
include/View/: ErrorView.hpp  HomeView.hpp
rust/: main.rs
src/: Layout.cpp  Router.cpp  View.cpp  main.cpp
src/Encoder/: RotaryEncoder.cpp
src/View/: ErrorView.cpp  HomeView.cpp
